# CryptocurrencyPricesMonitor

./: CMakeLists.txt  CryptocurrencyPricesMonitor.cpp  CryptocurrencyPricesMonitor.h  README.md  resources.qrc
images/: logo.aps
qml/: main.qml
